--- a/public/index.html
+++ b/public/index.html
@@ -10,24 +10,37 @@
 <body>
 
 <div class="container-fluid">
-	<div class="row">
+	<div class="row" id="header">
 		<div class="col">Header</div>
 	</div>
-	<div class="row">
-		<div class="col">
+	<div class="row" id="main">
+		<div class="col" id="sidebar">
 			<div id="accordion" role="tablist" aria-multiselectable="true">
 			  <div class="card">
 			    <div class="card-header" role="tab" id="headingOne">
 			      <h5 class="mb-0">
 			        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-			          Collapsible Group Item #1
+			          Formato
 			        </a>
 			      </h5>
 			    </div>
 
 			    <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
-			      <div class="card-block">
-			        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+			      <div class="card-block" id="selectFormatBlock">
+			        <label class="form-check-label">
+			          <input class="form-check-input" type="checkbox" value="selectFormatEmail" id="selectFormatEmail">
+			          E-mail
+			        </label>
+
+			        <label class="form-check-label">
+			          <input class="form-check-input" type="checkbox" value="selectFormatRedesSociais" id="selectFormatRedesSociais">
+			          Redes Sociais
+			        </label>
+
+			        <label class="form-check-label">
+			          <input class="form-check-input" type="checkbox" value="selectFormatBannerPortal" id="selectFormatBannerPortal">
+			          Banner Portal
+			        </label>
 			      </div>
 			    </div>
 			  </div>
@@ -61,7 +74,27 @@
 			  </div>
 			</div>
 		</div>
-		<div class="col-8">mainStage</div>
+		<div class="col-8">
+			<!-- Nav tabs -->
+			<ul class="nav nav-tabs" role="tablist">
+			  <li class="nav-item">
+			    <a class="nav-link active" data-toggle="tab" href="#emailStage" role="tab">E-mail</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" data-toggle="tab" href="#redesSociaisStage" role="tab">Redes Sociais</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" data-toggle="tab" href="#bannerPortalStage" role="tab">Banner Portal</a>
+			  </li>
+			</ul>
+
+			<!-- Tab panes -->
+			<div class="tab-content">
+			  <div class="tab-pane active" id="emailStage" role="tabpanel">EMAIL</div>
+			  <div class="tab-pane" id="redesSociaisStage" role="tabpanel">REDES SOCIAIS</div>
+			  <div class="tab-pane" id="bannerPortalStage" role="tabpanel">BANNER PORTAL</div>
+			</div>
+		</div>
 	</div>
 </div>
 
